# context-engine

./: .audit.toml  .dockerignore  .gitignore  .gitmodules  .repo-qa.toml  AGENT.md  AGENTS.md  ALGORITHM_COMPARISON.md  CHEAT_SHEET.md  CROSS_STORE_REFERENCE_TICKETS.md  Cargo.toml  DESIGN_AGENT_HARNESS.md  DESIGN_SESSION_BOOTSTRAPPING.md  DESIRED_SEARCH_ALGORITHM.md  DOCUMENTATION_SUMMARY.md  ENTITY_FEEDBACK_TICKETS.md  ENTITY_WORKSPACE_MOVE_TICKETS.md  FILE_SIZE_ANALYSIS.md  Makefile.toml  NEXT_SESSION_PROMPT.md  README.md  RESEARCH_VIEWER_ARCHITECTURE.md  TRACING_GUIDE.md  build_frontend.sh  cargo-commands.ipynb  context-engine.code-workspace  game.py  install-deps.sh  install-extensions.sh  install-tools.sh  repo_map.toon  rule-targets.toml  rule-targets.yaml  rustfmt.toml  viewer-ctl.toml
crates/audit-api/: Cargo.toml
crates/audit-api/src/: audit.rs  config.rs  index.rs
crates/audit-api/src/trials/: cargo_quality.rs  static_metrics.rs
crates/context-api/: Cargo.toml  README.md
crates/context-api/src/: ascii_graph.rs  error.rs  jq.rs  lib.rs  log_parser.rs  resolve.rs  tracing_capture.rs  types.rs  validation.rs
crates/context-api/src/commands/: atoms.rs  compare.rs  debug.rs  export_import.rs  insert.rs  logs.rs  mod.rs  patterns.rs  read.rs  search.rs
crates/context-api/src/tests/: mod.rs
crates/context-api/src/workspace/: manager.rs  metadata.rs  mod.rs  persistence.rs
crates/context-tasks/: Cargo.toml
crates/context-tasks/src/: cli.rs  error.rs  lib.rs  workspace.rs
crates/context-tasks/src/contracts/: command_schema.rs  mod.rs
crates/context-tasks/src/execution/: mod.rs  provider.rs  runner.rs  sandbox.rs
crates/context-tasks/src/model/: default_schema.rs  edge.rs  event.rs  filesystem.rs  mod.rs  query.rs  schema.rs  schema_registry.rs  ticket.rs
crates/context-tasks/src/serve/: auth_state.rs  error.rs  mod.rs  registry.rs  routes.rs
crates/context-tasks/src/storage/: index.rs  mod.rs  schema.rs  search.rs  store.rs  (+1 more)
crates/context-tasks/tests/: contracts_command_schema.rs  contracts_edge_registry.rs  contracts_exec_index_root.rs  contracts_filesystem.rs  contracts_history_branch.rs  contracts_manifest_roundtrip.rs  contracts_query_parser.rs  contracts_schema_validation.rs  contracts_storage_schema.rs  integration_history_diff_revert.rs  integration_ready_overview.rs  integration_sse_pipeline.rs  integration_workflow_crud.rs
crates/context-trace/: Cargo.toml  DOCUMENTATION_ANALYSIS.md  FILE_INDEX.md  HIGH_LEVEL_GUIDE.md  ROOTED_PATH_MACRO_GUIDE.md  TEST_EXPECTATIONS.md  TOKEN_STRING_REPR.md  TRACING_IMPLEMENTATION.md
crates/context-trace/src/: lib.rs
crates/memory-api/: Cargo.toml
crates/memory-api/src/: error.rs  lib.rs  workspace.rs
crates/spec-api/: Cargo.toml
crates/spec-api/schemas/: specification.toml
crates/spec-api/src/: code_ref.rs  default_schema.rs  error.rs  lib.rs  manifest.rs  slug.rs  store.rs
crates/spec-api/tests/: schema_test.rs
crates/ticket-api/: Cargo.toml
crates/ticket-api/benches/: graph_ops.rs
crates/ticket-api/schemas/: tracker-improvement.toml
crates/ticket-api/src/: error.rs  lib.rs  workspace.rs
tools/cli/audit-cli/: Cargo.toml
tools/cli/crane-cli/: Cargo.toml  README.md
tools/cli/peek-cli/: Cargo.toml  README.md
tools/cli/repo-qa-cli/: Cargo.toml
tools/cli/spec-cli/: Cargo.toml
tools/context-cli/: Cargo.toml
tools/context-cli/src/: main.rs  output.rs  repl.rs
tools/context-cli/tests/: FAILING_TESTS.md
tools/context-editor/kernel/: Cargo.toml
tools/context-editor/sandbox-app/: Cargo.toml  Trunk.toml  index.html
tools/context-http/: Cargo.toml  README.md
tools/context-http/src/: error.rs  lib.rs  main.rs  rest.rs  router.rs  state.rs
tools/context-http/tests/: http_integration.rs
tools/context-mcp/: Cargo.toml  README.md
tools/context-mcp/src/: main.rs  server.rs
tools/doc-viewer/: Cargo.toml  README.md  install.ps1
tools/doc-viewer/frontend/: index.html  package-lock.json  package.json  vite.config.ts
tools/doc-viewer/src/: git.rs  helpers.rs  http.rs  http_server.rs  main.rs  markdown_ast.rs  parser.rs  query.rs  schema.rs
tools/doc-viewer/static/: index.html
tools/http/spec-http/: Cargo.toml
tools/log-viewer/: Cargo.toml  README.md  log-viewer.toml  log-viewer.toml.example  tsconfig.json
tools/log-viewer/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
tools/log-viewer/scripts/: generate-demo-data.mjs  generate-demo-logs.sh
tools/log-viewer/src/: config.rs  handlers.rs  log_parser.rs  main.rs  mcp_server.rs  query.rs  router.rs  source.rs  state.rs  types.rs
tools/log-viewer/static/: .gitkeep  index.html
tools/mcp-docs-server/: Cargo.toml  README.md  install.ps1  install.sh
tools/mcp-docs-server/src/: git.rs  main.rs  parser.rs  schema.rs  templates.rs  tools.rs
tools/mcp/audit-mcp/: Cargo.toml
tools/peek-api/: Cargo.toml  README.md
tools/peek-api/src/: lib.rs
tools/ticket-cli/: Cargo.toml
tools/ticket-cli/src/: cli.rs
tools/ticket-cli/tests/: contracts_command_schema.rs  contracts_edge_registry.rs  contracts_exec_index_root.rs  contracts_filesystem.rs  contracts_history_branch.rs  contracts_query_parser.rs  contracts_schema_validation.rs  integration_history_diff_revert.rs  integration_reindex_stale_entries.rs  integration_sse_pipeline.rs  integration_workflow_crud.rs  integration_workflow_validate_release.rs
tools/ticket-http/: Cargo.toml
tools/ticket-http/src/: lib.rs
tools/ticket-mcp/: Cargo.toml  README.md
tools/ticket-mcp/src/: main.rs  server.rs
tools/ticket-viewer/: Cargo.toml  READY_TICKETS_REVIEW.md
tools/ticket-viewer/src/: main.rs  proxy.rs
tools/ticket-viewer/static/: index.html
tools/tracing-analyzer/: Cargo.toml
tools/tracing-analyzer/src/: analyzer.rs  function_collector.rs  main.rs  tracing_collector.rs
tools/viewer-api/: Cargo.toml  README.md
tools/viewer-api/frontend/: package-lock.json  package.json  tsconfig.json
tools/viewer-api/scripts/: run-mcp.sh
tools/viewer-api/src/: auth.rs  dev_proxy.rs  lib.rs  session.rs  source.rs
(+6937 files in other folders)
