[workspace]
resolver = "2"
members = [
  "memory-viewers/memory-api/crates/audit-api",
  "memory-viewers/memory-api/crates/memory-api",
  "memory-viewers/memory-api/crates/rule-api",
  "memory-viewers/memory-api/crates/ticket-api",
  "memory-viewers/memory-api/crates/spec-api",
  "crates/context-stack/context-search",
  "crates/context-stack/context-insert",
  "crates/context-stack/context-read",
  "crates/context-stack/context-trace",
  "crates/context-stack/context-trace-macros",
  "crates/context-stack/context-api",
  "crates/context-stack/ngrams",
  "tools/viewer/doc-viewer",
  "tools/viewer/log-viewer",
  "tools/viewer/log-viewer/frontend/dioxus",
  "memory-viewers/viewer-api/viewer-api",
  "memory-viewers/viewer-api/viewer-ctl",
  "memory-viewers/ticket-viewer",
  "memory-viewers/spec-viewer",
  "memory-viewers/memory-api/tools/http/ticket-http",
  "memory-viewers/memory-api/tools/http/spec-http",
  "memory-viewers/memory-api/tools/cli/audit-cli",
  "memory-viewers/memory-api/tools/cli/rule-cli",
  "memory-viewers/memory-api/tools/cli/ticket-cli",
  "tools/migrate-edges",
  "memory-viewers/memory-api/tools/cli/spec-cli",
  "memory-viewers/memory-api/tools/mcp/ticket-mcp",
  "memory-viewers/memory-api/tools/mcp/spec-mcp",
  "memory-viewers/memory-api/tools/mcp/audit-mcp",
  "memory-viewers/memory-api/tools/mcp/rule-mcp",
  "tools/tracing-analyzer",
  "tools/dungeon-crawler",
  "tools/cli/crane-cli",
  "crates/context-stack/tools/cli/context-cli",
  "crates/context-stack/tools/mcp/context-mcp",
  "crates/context-stack/tools/http/context-http",
  "memory-viewers/viewer-api/viewer-api/frontend/dioxus",
  "memory-viewers/ticket-viewer/frontend/dioxus",
  "memory-viewers/spec-viewer/frontend/dioxus",
  "crates/context-stack/tools/context-editor/kernel",
  "crates/context-stack/tools/context-editor/sandbox-app",
]
exclude = [
  "./crates/context-stack/deps/petgraph",
  "./crates/context-stack/deps/justlog",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 2 # fast and small wasm

[workspace.metadata.docs.rs]
no-deps = true
