[workspace]
resolver = "2"
members = [
  "memory-viewers/memory-api/crates/audit-api",
  "memory-viewers/memory-api/crates/doc-api",
  "memory-viewers/memory-api/crates/memory-api",
  "memory-viewers/memory-api/crates/rule-api",
  "memory-viewers/memory-api/crates/ticket-api",
  "memory-viewers/memory-api/crates/spec-api",
  "memory-viewers/memory-api/crates/test-api",
  "memory-viewers/memory-api/crates/log-api",
  "memory-viewers/memory-api/tools/http/doc-http",
  "context-stack/context-search",
  "context-stack/context-insert",
  "context-stack/context-read",
  "context-stack/context-trace",
  "context-stack/context-trace-macros",
  "context-stack/context-api",
  "context-stack/ngrams",
  "tools/viewer/doc-viewer",
  "tools/viewer/log-viewer",
  "tools/viewer/log-viewer/frontend/dioxus",
  "memory-viewers/viewer-api/viewer-api",
  "memory-viewers/viewer-api/viewer-ctl",
  "memory-viewers/ticket-viewer",
  "memory-viewers/spec-viewer",
  "memory-viewers/memory-api/tools/http/ticket-http",
  "memory-viewers/memory-api/tools/http/spec-http",
  "memory-viewers/memory-api/tools/cli/audit-cli",
  "memory-viewers/memory-api/tools/cli/rule-cli",
  "memory-viewers/memory-api/tools/cli/ticket-cli",
  "tools/migrate-edges",
  "memory-viewers/memory-api/tools/cli/spec-cli",
  "memory-viewers/memory-api/tools/mcp/ticket-mcp",
  "memory-viewers/memory-api/tools/mcp/spec-mcp",
  "memory-viewers/memory-api/tools/mcp/audit-mcp",
  "memory-viewers/memory-api/tools/mcp/rule-mcp",
  "tools/tracing-analyzer",
  "tools/dungeon-crawler",
  "tools/cli/crane-cli",
  "context-stack/tools/cli/context-cli",
  "context-stack/tools/mcp/context-mcp",
  "context-stack/tools/http/context-http",
  "memory-viewers/viewer-api/viewer-api/frontend/dioxus",
  "memory-viewers/ticket-viewer/frontend/dioxus",
  "memory-viewers/spec-viewer/frontend/dioxus",
  "context-stack/tools/context-editor/kernel",
  "context-stack/tools/context-editor/sandbox-app",
]
exclude = [
  "./context-stack/deps/petgraph",
  "./context-stack/deps/justlog",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 2 # fast and small wasm

[workspace.metadata.docs.rs]
no-deps = true
