[workspace]
resolver = "2"
members = [
  "memory-api/crates/audit-api",
  "memory-api/crates/doc-api",
  "memory-api/crates/memory-api",
  "memory-api/crates/rule-api",
  "memory-api/crates/ticket-api",
  "memory-api/crates/spec-api",
  "memory-api/crates/test-api",
  "memory-api/crates/log-api",
  "memory-api/crates/session-api",
  "memory-api/crates/feedback-api",
  "memory-api/crates/memory-fixtures",
  "memory-api/crates/memory-matrix",
  "memory-api/crates/ticket-vscode-core",
  "memory-api/tools/http/doc-http",
  "context-stack/context-search",
  "context-stack/context-insert",
  "context-stack/context-read",
  "context-stack/context-trace",
  "context-stack/context-trace-macros",
  "context-stack/context-api",
  "context-stack/ngrams",
  "memory-viewers/doc-viewer",
  "memory-viewers/log-viewer",
  "memory-viewers/log-viewer/frontend/dioxus",
  "viewer-api/viewer-api",
  "viewer-api/viewer-ctl",
  "memory-viewers/ticket-viewer",
  "memory-viewers/spec-viewer",
  "memory-api/tools/http/ticket-http",
  "memory-api/tools/http/spec-http",
  "memory-api/tools/http/feedback-http",
  "memory-api/tools/cli/audit-cli",
  "memory-api/tools/cli/rule-cli",
  "memory-api/tools/cli/ticket-cli",
  "memory-api/tools/cli/feedback-cli",
  "tools/migrate-edges",
  "memory-api/tools/cli/spec-cli",
  "memory-api/tools/cli/session-cli",
  "memory-api/tools/cli/test-cli",
  "memory-api/tools/mcp/ticket-mcp",
  "memory-api/tools/mcp/spec-mcp",
  "memory-api/tools/mcp/audit-mcp",
  "memory-api/tools/mcp/rule-mcp",
  "memory-api/tools/mcp/session-mcp",
  "memory-api/tools/mcp/test-mcp",
  "memory-api/tools/mcp/feedback-mcp",
  "tools/tracing-analyzer",
  "tools/dungeon-crawler",
  "memory-api/crates/peek-api",
  "tools/cli/crane-cli",
  "memory-api/tools/cli/peek-cli",
  "memory-api/tools/mcp/peek-mcp",
  "memory-api/tools/mcp/compact-terminal-mcp",
  "context-stack/tools/cli/context-cli",
  "context-stack/tools/mcp/context-mcp",
  "context-stack/tools/http/context-http",
  "viewer-api/viewer-api/frontend/dioxus",
  "memory-viewers/ticket-viewer/frontend/dioxus",
  "memory-viewers/spec-viewer/frontend/dioxus",
  "context-stack/tools/context-editor/kernel",
  "context-stack/tools/context-editor/sandbox-app",
]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 2 # fast and small wasm

[workspace.metadata.docs.rs]
no-deps = true
