[package]
name = "audit-api"
version = "0.1.0"
edition = "2024"
description = "Core repository quality audit logic and data models"

[lib]
name = "audit_api"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cargo_metadata = "0.19"
ignore = "0.4"
proc-macro2 = { version = "1", features = ["span-locations"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
syn = { version = "2", features = ["full", "visit"] }
thiserror = "2"