[package]
name = "context-tasks"
version = "0.1.0"
edition = "2024"
description = "Distributed filesystem ticket contracts and indexing primitives"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
