[package]
name = "context-tasks"
version = "0.1.0"
edition = "2024"
description = "Distributed filesystem ticket contracts and indexing primitives"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
redb = "2"
tantivy = "0.22"
notify = "6"
bincode = "1"
fs4 = "0.11"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
url = "2"

# HTTP serve mode
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
arc-swap = "1"
futures-util = "0.3"
tracing = "0.1"
viewer-api = { path = "../../tools/viewer-api" }

[dev-dependencies]
pretty_assertions = "1"
