[package]
name = "memory-api"
version = "0.1.0"
edition = "2024"
description = "Generic filesystem-backed entity storage: schema validation, redb indexing, Tantivy search, edge management, board coordination, and workspace resolution"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled", "unlock_notify"] }
tantivy = "0.22"
notify = "6"
bincode = "1"
sha2 = "0.10"
fs4 = "0.11"
tempfile = "3"
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
