[package]
name = "spec-api"
version = "0.1.0"
edition = "2024"
description = "Specification system: manifest model, storage, and domain logic"

[dependencies]
memory-api = { path = "../memory-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
