[package]
name = "ticket-api"
version = "0.1.0"
edition = "2024"
description = "Core ticket library: domain types, storage, query, and workspace management"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
redb = "2"
tantivy = "0.22"
notify = "6"
bincode = "1"
sha2 = "0.10"
fs4 = "0.11"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
url = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
