[package]
name = "ticket-api"
version = "0.1.0"
edition = "2024"
description = "Core ticket library: domain types, storage, query, and workspace management"

[dependencies]
memory-api = { path = "../memory-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
notify = "6"
fs4 = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
url = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
