[package]
name = "context-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for context-engine hypergraph workspaces"

[[bin]]
name = "context-cli"
path = "src/main.rs"

[dependencies]
context-api = { path = "../../crates/context-api" }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
context-api = { path = "../../crates/context-api" }
