[package]
name = "context-http"
version = "0.1.0"
edition = "2021"
description = "HTTP + GraphQL adapter for context-engine API"

[lib]
name = "context_http"
path = "src/lib.rs"

[[bin]]
name = "context-http"
path = "src/main.rs"

[features]
default = []
graphql = ["dep:async-graphql", "dep:async-graphql-axum"]

[dependencies]
context-api = { path = "../../crates/context-api" }
viewer-api = { path = "../viewer-api" }

axum = { version = "0.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tower-http = { version = "0.5", features = ["cors"] }

# Optional GraphQL support
async-graphql = { version = "7", optional = true }
async-graphql-axum = { version = "7", optional = true }

[dev-dependencies]
axum-test = "14"
tempfile = "3"
