[package]
name = "context-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for context-engine hypergraph workspaces"

[[bin]]
name = "context-mcp"
path = "src/main.rs"

[dependencies]
context-api = { path = "../../crates/context-api" }

rmcp = { version = "0.14", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
