[package]
name = "doc-viewer-backend"
version = "0.1.0"
edition = "2021"
description = "HTTP server and MCP server for viewing and querying documentation files"

[workspace]

[[bin]]
name = "doc-viewer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
walkdir = "2"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io"] }
