[package]
name = "doc-viewer-backend"
version = "0.1.0"
edition = "2021"
description = "HTTP server and MCP server for viewing and querying documentation files"

[workspace]

[[bin]]
name = "doc-viewer"
path = "src/main.rs"

[dependencies]
# Shared viewer infrastructure
viewer-api = { path = "../viewer-api" }

# App-specific
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
walkdir = "2"

# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
