[package]
name = "doc-viewer"
version = "0.1.0"
edition = "2021"
description = "HTTP server and MCP server for viewing and querying documentation files"

[workspace]

[[bin]]
name = "doc-viewer"
path = "src/main.rs"

[dependencies]
# Shared viewer infrastructure
viewer-api = { path = "../viewer-api" }

# App-specific
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
walkdir = "2"

# jq query language
jaq-core = "1"
jaq-std = "1"
jaq-interpret = "1"
jaq-syn = "1"

# Markdown parsing
markdown = "1"

# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io"] }
