[package]
name = "mcp-docs-server"
version = "0.1.0"
edition = "2021"
description = "MCP server for structured agent documentation management"

[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
regex = "1"
walkdir = "2"

# MCP protocol
rmcp = { version = "0.14", features = ["server", "transport-io"] }
