[package]
name = "peek-api"
version = "0.1.0"
edition = "2024"
description = "Shared token-bounded inspection API for peek transports"

[lib]
name = "peek_api"
path = "src/lib.rs"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toon-format = "0.5"

[dev-dependencies]
tempfile = "3"