[package]
name = "ticket-cli"
version = "0.1.0"
edition = "2024"
description = "CLI interface for ticket-api: the `ticket` command"

[[bin]]
name = "ticket"
path = "src/bin/ticket.rs"

[lib]
name = "ticket_cli"
path = "src/lib.rs"

[dependencies]
ticket-api = { path = "../../crates/ticket-api" }
ticket-http = { path = "../ticket-http" }

clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
chrono = "0.4"
toml = "0.8"
