[package]
name = "ticket-mcp"
version = "0.1.0"
edition = "2024"
description = "Thin MCP server wrapper around the ticket HTTP API"

[[bin]]
name = "ticket-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
