[package]
name = "ticket-viewer"
version = "0.1.0"
edition = "2021"
description = "HTTP server and SPA frontend for viewing and navigating the ticket graph"

[[bin]]
name = "ticket-viewer"
path = "src/main.rs"

[dependencies]
# Shared viewer infrastructure
viewer-api = { path = "../viewer-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
