[package]
name = "audit-cli"
version = "0.1.0"
edition = "2024"
description = "CLI interface for audit-api: the `audit` command"

[[bin]]
name = "audit"
path = "src/bin/audit.rs"

[lib]
name = "audit_cli"
path = "src/lib.rs"

[dependencies]
audit-api = { path = "../../../crates/audit-api" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }