[package]
name = "crane-cli"
version = "0.1.0"
edition = "2024"
description = "Filter git history for selected source trees and transplant it into another repository"

[[bin]]
name = "crane"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"