[package]
name = "peek-cli"
version = "0.1.0"
edition = "2024"
description = "Token-bounded file inspection utility — defaults to narrow line windows instead of whole-file reads"

[[bin]]
name = "peek"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
peek-api = { path = "../../peek-api" }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"
toon-format = "0.5"
viewer-api = { path = "../../../viewer-api/viewer-api" }
