[package]
name = "repo-qa-cli"
version = "0.1.0"
edition = "2024"
description = "CLI interface for repo-qa-api: the `repo-qa` command"

[[bin]]
name = "repo-qa"
path = "src/bin/repo-qa.rs"

[lib]
name = "repo_qa_cli"
path = "src/lib.rs"

[dependencies]
repo-qa-api = { path = "../../../crates/repo-qa-api" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }