[package]
name = "sandbox-app"
version = "0.1.0"
edition = "2021"

[dependencies]
context-editor-kernel = { path = "../kernel" }
dioxus = { version = "0.7", features = ["web"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

# getrandom 0.3.x requires both the Cargo feature and a --cfg rustflag
# (set in ../.cargo/config.toml) to use Web Crypto on wasm32-unknown-unknown.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_pbr",
    "bevy_winit",
    "bevy_window",
] }
bevy_ecs = { version = "0.18" }
bevy_rapier3d = { version = "0.33", default-features = false, features = ["dim3"] }
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }
