[package]
name = "audit-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP server for repository quality audits with a synchronized local index"

[[bin]]
name = "audit-mcp"
path = "src/main.rs"

[lib]
name = "audit_mcp"
path = "src/lib.rs"

[dependencies]
audit-api = { path = "../../../crates/audit-api" }
rmcp = { version = "0.14", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
